--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,28 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-11-27 07:32:24.378018: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-11-27 07:32:25.866329: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-11-27 07:32:26.068872: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1732692746.291741    2426 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1732692746.313898    2426 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-11-27 07:32:26.452913: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importar paquetes\n",
     "# pip install tensorflow\n",
-    "\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
@@ -41,18 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../data/raw/dog'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m dog_subfolder \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdog\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Obtener una lista de todos los nombres de archivos de imágenes de perros\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m dog_image_files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdog_subfolder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Cargar las nueve primeras imágenes de perros\u001b[39;00m\n\u001b[1;32m     13\u001b[0m dog_images \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/raw/dog'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\n"
      ]
     }
    ],
@@ -60,7 +40,109 @@
     "# Importar y comprobar las 9 primeras imágenes de perros\n",
     "\n",
     "# Ruta al directorio que contiene sus datos de imagen\n",
-    "data_dir = \"../data/raw\"\n",
+    "# data_dir = \"../data/raw\"\n",
+    "data_dir = \"C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\"\n",
+    "print(data_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\\\dog'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obtener una lista de todos los nombres de archivos de imágenes de perros\n",
+    "dog_subfolder = os.path.join(data_dir, \"dog\")\n",
+    "dog_subfolder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: 'C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\\\dog'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dog_image_files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdog_subfolder\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: 'C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\\\dog'"
+     ]
+    }
+   ],
+   "source": [
+    "dog_image_files = os.listdir(dog_subfolder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se pudo encontrar el directorio: C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\dog\n",
+      "Verifica la ruta y los permisos.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ruta absoluta (ejemplo)\n",
+    "data_dir = \"C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\"\n",
+    "\n",
+    "# Ruta relativa usando barras normales\n",
+    "# data_dir = \"../dogs-vs-cats/train\"\n",
+    "\n",
+    "dog_subfolder = os.path.join(data_dir, \"dog\")\n",
+    "\n",
+    "# Obtener una lista de todos los nombres de archivos de imágenes de perros\n",
+    "try:\n",
+    "    dog_image_files = os.listdir(dog_subfolder)\n",
+    "    print(dog_image_files)\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"No se pudo encontrar el directorio: {dog_subfolder}\")\n",
+    "    print(\"Verifica la ruta y los permisos.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 123] El nombre de archivo, el nombre de directorio o la sintaxis de la etiqueta del volumen no son correctos: 'file:///C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\\\dog'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m dog_subfolder \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdog\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Obtener una lista de todos los nombres de archivos de imágenes de perros\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m dog_image_files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdog_subfolder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Cargar las nueve primeras imágenes de perros\u001b[39;00m\n\u001b[0;32m     14\u001b[0m dog_images \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 123] El nombre de archivo, el nombre de directorio o la sintaxis de la etiqueta del volumen no son correctos: 'file:///C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\\\\dog'"
+     ]
+    }
+   ],
+   "source": [
+    "# Importar y comprobar las 9 primeras imágenes de perros\n",
+    "\n",
+    "# Ruta al directorio que contiene sus datos de imagen\n",
+    "# data_dir = \"../data/raw\"\n",
+    "data_dir = \"file:///C:/Users/pjpar/OneDrive/Escritorio/dogs-vs-cats/train\"\n",
     "\n",
     "# Obtener una lista de todos los nombres de archivos de imágenes de perros\n",
     "dog_subfolder = os.path.join(data_dir, \"dog\")\n",
@@ -328,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   },
   "orig_nbformat": 4
  },
